# gstreamerMMDemonstrator

./: README.md  settings.gradle
app/: build.gradle
app/libs/gstreamermm-1.10.0/docs/reference/: gstreamermm-1.0.devhelp2  gstreamermm-1.0.tag
app/libs/gstreamermm-1.10.0/docs/reference/html/: annotated.html  basics_2bin_8cc-example.html  basics_2bus_8cc-example.html  basics_2dynamic_pads_8cc-example.html  basics_2element_factory_8cc-example.html  basics_2init_gstreamermm_8cc-example.html  classGst_1_1AllocationParams-members.html  classGst_1_1AllocationParams.html  classGst_1_1Allocator-members.html  classGst_1_1Allocator.html  classGst_1_1AtomicQueue-members.html  classGst_1_1AtomicQueue.html  classGst_1_1AudioBaseSink-members.html  classGst_1_1AudioBaseSink.html  classGst_1_1AudioBaseSrc-members.html  classGst_1_1AudioBaseSrc.html  classGst_1_1AudioCdSrc-members.html  classGst_1_1AudioCdSrc.html  classGst_1_1AudioClock-members.html  classGst_1_1AudioClock.html  classGst_1_1AudioFilter-members.html  classGst_1_1AudioFilter.html  classGst_1_1AudioFormatInfo-members.html  classGst_1_1AudioFormatInfo.html  classGst_1_1AudioInfo-members.html  classGst_1_1AudioInfo.html  classGst_1_1AudioRingBuffer-members.html  classGst_1_1AudioRingBuffer.html  classGst_1_1AudioRingBufferSpec-members.html  classGst_1_1AudioRingBufferSpec.html  classGst_1_1AudioSink-members.html  classGst_1_1AudioSink.html  classGst_1_1AudioSrc-members.html  classGst_1_1AudioSrc.html  classGst_1_1BaseSink-members.html  classGst_1_1BaseSink.html  classGst_1_1BaseSrc-members.html  classGst_1_1BaseSrc.html  classGst_1_1BaseTransform-members.html  classGst_1_1BaseTransform.html  (+428 more)
app/libs/gstreamermm-android-universal-1.10.0/arm64/lib/: libglibmm-2.4.la  libgstreamermm-1.0.la  libsigc-2.0.la
app/libs/gstreamermm-android-universal-1.10.0/arm64/lib/pkgconfig/: glibmm-2.4.pc  gstreamermm-1.0.pc  sigc++-2.0.pc
app/libs/gstreamermm-android-universal-1.10.0/arm64/share/aclocal/: mm-common.m4
app/libs/gstreamermm-android-universal-1.10.0/arm64/share/pkgconfig/: mm-common-libstdc++.pc  mm-common-util.pc
app/libs/gstreamermm-android-universal-1.10.0/armv7/lib/: libglibmm-2.4.la  libgstreamermm-1.0.la  libsigc-2.0.la
app/libs/gstreamermm-android-universal-1.10.0/armv7/lib/pkgconfig/: glibmm-2.4.pc  gstreamermm-1.0.pc  sigc++-2.0.pc
app/libs/gstreamermm-android-universal-1.10.0/armv7/share/pkgconfig/: mm-common-libstdc++.pc  mm-common-util.pc
app/libs/gstreamermm-android-universal-1.10.0/x86/lib/: libglibmm-2.4.la  libgstreamermm-1.0.la  libsigc-2.0.la
app/libs/gstreamermm-android-universal-1.10.0/x86/lib/pkgconfig/: glibmm-2.4.pc  gstreamermm-1.0.pc  sigc++-2.0.pc
app/libs/gstreamermm-android-universal-1.10.0/x86/share/pkgconfig/: mm-common-libstdc++.pc  mm-common-util.pc
app/libs/gstreamermm-android-universal-1.10.0/x86_64/lib/: libglibmm-2.4.la  libgstreamermm-1.0.la  libsigc-2.0.la
app/libs/gstreamermm-android-universal-1.10.0/x86_64/lib/pkgconfig/: glibmm-2.4.pc  gstreamermm-1.0.pc  sigc++-2.0.pc
app/libs/gstreamermm-android-universal-1.10.0/x86_64/share/pkgconfig/: mm-common-libstdc++.pc  mm-common-util.pc
app/src/androidTest/java/com/example/gstreamermm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  testApp.cpp  testApp.h
app/src/main/java/com/example/gstreamermm/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gstreamermm/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
